MachineReaderDAO is working properly

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,3 +2,35 @@ project.name = stile
 persistence.unit.name = stilePU
 general.default.locale.language = pt
 general.default.locale.country = BR
+import.column.title.personnel.type = Tipo
+import.column.title.personnel.code = C\u00f3digo
+import.column.title.personnel.name = Nome
+import.column.title.personnel.login = Login
+import.column.title.personnel.password = Senha
+import.column.title.machine.machine = M\u00e1quina
+import.column.title.machine.sector = Setor
+import.column.title.sector.name = Nome
+import.column.title.sector.supervisor = Supervisor
+import.column.title.subordinate.supervisor = Supervisor
+import.column.title.subordinate.subordinate = Subordinado
+import.column.title.supervisor.manager = Gerente
+import.column.title.supervisor.supervisor = Supervisor
+import.column.title.chart.name = Nome
+import.column.title.chart.abbreviation = Abrevia\u00e7\u00e3o
+import.column.title.size.chart = Grade
+import.column.title.size.size = Tamanho
+import.column.title.collection.name = Nome
+import.column.title.fabric.name = Nome
+import.column.title.fabric.observation = Observa\u00e7\u00e3o
+import.column.title.fabric.collection = Cole\u00e7\u00e3o
+import.column.title.
+import.column.title.
+import.column.title.
+import.column.title.
+import.column.title.
+import.column.title.
+import.column.title.
+
+
+
+
