--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <name>stile</name>
     <groupId>tech.adrianohrl</groupId>
     <artifactId>stile</artifactId>
-    <version>1.3.7</version>
+    <version>1.3.8</version>
     <packaging>jar</packaging>
     
     <properties>
@@ -66,6 +66,12 @@
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
             <version>${groovy.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     
