(Phase, Collection, Family, Chart, ChartSize, Model, and ModelPhase)ReaderDAO are working properly

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -23,14 +23,15 @@ import.column.title.collection.name = Nome
 import.column.title.fabric.name = Nome
 import.column.title.fabric.observation = Observa\u00e7\u00e3o
 import.column.title.fabric.collection = Cole\u00e7\u00e3o
-import.column.title.
-import.column.title.
-import.column.title.
-import.column.title.
-import.column.title.
-import.column.title.
-import.column.title.
-
-
-
-
+import.column.title.family.name = Fam\u00edlia
+import.column.title.family.collection = Cole\u00e7\u00e3o
+import.column.title.phase.name = Fase
+import.column.title.phase.sector = Setor
+import.column.title.model.reference = Refer\u00eancia
+import.column.title.model.name = Nome
+import.column.title.model.family = Fam\u00edlia
+import.column.title.model.collection = Cole\u00e7\u00e3o
+import.column.title.model.chart = Grade
+import.column.title.model.phase.model = Refer\u00eancia
+import.column.title.model.phase.phase = Fase
+import.column.title.model.phase.duration = Dura\u00e7\u00e3o
