--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -35,3 +35,8 @@ import.column.title.model.chart = Grade
 import.column.title.model.phase.model = Refer\u00eancia
 import.column.title.model.phase.phase = Fase
 import.column.title.model.phase.duration = Dura\u00e7\u00e3o
+import.column.title.model.part.model = Modelo
+import.column.title.model.part.part = Nome
+import.column.title.model.part.program = Programa
+import.column.title.model.part.observation = Observa\u00e7\u00e3o
+import.column.title.model.part.fabric = Tecido
